<resources>
    // App and activities names
    <string name="app_name">Jgive</string>
    <string name="title_activity_home">Jgive</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_tithe">Tithe calculator</string>
    <string name="title_activity_tithe_update">Tithe Update</string>
    <string name="title_activity_profile">Your Profile</string>
    <string name="title_activity_update_profile">Update Your Profile</string>
    <string name="title_activity_donation">Donation</string>
    <string name="title_activity_tax_refund">Tax Refund</string>

    // Messages
    <string name="welcome">Welcome to Jgive</string>
    <string name="success">Great!</string>
    <string name="partial_success">Something went wrong, but not all bad. Please try again or contact our support</string>
    <string name="error_message">Something went wrong, Please try again or contact our support</string>
    <string name="donation_thanks">"Thank you for donating this important goal"</string>

    // Tithe Activity
    <string-array name="years_array">
        <item>Year</item>
        <item>2017</item>
        <item>2016</item>
        <item>2015</item>
        <item>2014</item>
        <item>2013</item>
        <item>2012</item>
        <item>2011</item>
        <item>2010</item>
    </string-array>
    <string-array name="months_array">
        <item>Month</item>
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string name="separator">/</string>
    <string name="incomes">Incomes</string>
    <string name="tithe_free">Tithe free expenses</string>
    <string name="donations">Donations</string>
    <string name="provisions">Provisions</string>
    <string name="balance">Balance</string>

    // Tithe Update Activity
    <string-array name="types_array">
        <item>Adding an income</item>
        <item>Adding a tithe free expense</item>
        <item>Adding a donation</item>
    </string-array>
    <string name="source">Source</string>
    <string name="sourceName">Source name</string>
    <string name="target">Target</string>
    <string name="targetName">Target name</string>
    <string name="amount">Amount</string>
    <string name="enterAmount">Enter the amount</string>
    <string name="date">Date</string>

    // Login Activity
    <string name="email">Email</string>
    <string name="enterEmail">Enter your email</string>
    <string name="password">Password</string>
    <string name="enterPassword">eg. X8df!90EO</string>
    <string name="login">Login</string>
    <string name="register">Sign up</string>
    <string name="login_message">Already registered?</string>
    <string name="register_message">First time visiting Jgive?</string>
    <string name="facebook_message">Use easy access with Facebook</string>
    <string name="facebook_app_id">609001459303889</string>
    <string name="fb_login_protocol_scheme">fb609001459303889</string>

    //Profile Activity
    <string name="hello">Hello</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="title">Title</string>
    <string name="country">Country</string>
    <string name="biography">Biography</string>
    <string name="website">Website</string>
    <string name="monthlyUpdate">Monthly Update</string>

    //Donation Activity
    <string name="donationAmount">Donation Amount</string>

    // Content Description
    <string name="jgive_logo">Jgive Logo</string>
</resources>
