<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <!-- Search Icon -->
    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title=""
        app:showAsAction="always"/>

    <!-- Search Icon -->
    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_black_24dp"
        android:title=""
        app:showAsAction="always"/>

    <!-- Search Icon -->
    <item
        android:id="@+id/action_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/title_activity_profile"
        app:showAsAction="always"/>

    <!-- Calculator Icon -->
    <item
        android:id="@+id/action_tithe_calculator"
        android:icon="@drawable/calculator"
        android:title="@string/title_activity_tithe"
        app:showAsAction="ifRoom"/>

    <!-- Tax refund Icon -->
    <item
        android:id="@+id/action_tax_refund"
        android:icon="@drawable/tax_refund"
        android:title="@string/title_activity_tax_refund"
        app:showAsAction="ifRoom"/>

</menu>