<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jgive.kobieliasi.jgiveapp.LoginActivity"
    tools:showIn="@layout/activity_login">

    <!-- Email Title -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:text="@string/email"/>

    <!-- Email filed -->
    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/emailTextView"
        android:layout_toRightOf="@+id/emailTextView"
        android:layout_alignBaseline="@+id/emailTextView"
        android:layout_alignBottom="@+id/emailTextView"
        android:textSize="20sp"
        android:hint="@string/enterEmail"
        android:inputType="textEmailAddress"/>

    <!-- Password Title -->
    <TextView
        android:id="@+id/passwordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/emailTextView"
        android:textSize="20sp"
        android:text="@string/password"/>

    <!-- Password filed -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/passwordTextView"
        android:layout_toRightOf="@+id/passwordTextView"
        android:layout_alignBaseline="@+id/passwordTextView"
        android:layout_alignBottom="@+id/passwordTextView"
        android:textSize="20sp"
        android:hint="@string/enterPassword"
        android:inputType="textPassword"/>

    <!-- Login button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/passwordTextView"
        android:textSize="20sp"
        android:text="@string/login"/>

</RelativeLayout>
