<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tithe_update"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jgive.kobieliasi.jgiveapp.TitheUpdateActivity"
    tools:showIn="@layout/activity_tithe_update">

    <Spinner
        android:id="@+id/inputRecordSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center">
    </Spinner>

    <!-- Source/Target Title -->
    <TextView
        android:id="@+id/srcTrgTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/inputRecordSpinner"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/source"/>

    <!-- Source/Target Name -->
    <EditText
        android:id="@+id/srcTrgNameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_alignBaseline="@+id/srcTrgTitleTextView"
        android:layout_toRightOf="@+id/srcTrgTitleTextView"
        android:layout_toEndOf="@+id/srcTrgTitleTextView"
        android:textSize="20sp"
        android:hint="@string/sourceName"/>

    <!-- Amount Title -->
    <TextView
        android:id="@+id/amountTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/srcTrgTitleTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/amount"/>

    <!-- Tithe Free Amount -->
    <EditText
        android:id="@+id/amountEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_alignBaseline="@+id/amountTitleTextView"
        android:layout_toEndOf="@+id/amountTitleTextView"
        android:layout_toRightOf="@+id/amountTitleTextView"
        android:layout_below="@+id/srcTrgNameEditText"
        android:textSize="20sp"
        android:hint="@string/enterAmount"
        android:inputType="numberDecimal"/>

    <!-- Date Title -->
    <TextView
        android:id="@+id/dateTitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/amountTitleTextView"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/date"/>

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/dateTitleTextView"
        android:calendarViewShown="false"
        android:spinnersShown="true"
        android:datePickerMode="spinner"
        android:minDate="01/01/2010"/>

</RelativeLayout>
