<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_tithe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.jgive.kobieliasi.jgiveapp.TitheActivity"
    tools:showIn="@layout/activity_tithe">

    <!-- Incomes Title -->
    <TextView
        android:id="@+id/incomesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:textSize="20sp"
        android:text="@string/incomes"/>

    <!-- Incomes Amount -->
    <TextView
        android:id="@+id/incomesAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/incomesTextView"
        android:layout_toRightOf="@+id/incomesTextView"
        android:textSize="20sp"/>

    <!-- Tithe Free Title -->
    <TextView
        android:id="@+id/titheFreeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/incomesTextView"
        android:textSize="20sp"
        android:text="@string/tithe_free"/>

    <!-- Tithe Free Amount -->
    <TextView
        android:id="@+id/titheFreeAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/titheFreeTextView"
        android:layout_toRightOf="@+id/titheFreeTextView"
        android:layout_below="@+id/incomesAmountTextView"
        android:textSize="20sp"/>

    <!-- Donations Title -->
    <TextView
        android:id="@+id/donationsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/titheFreeTextView"
        android:textSize="20sp"
        android:text="@string/donations"/>

    <!-- Donations Amount -->
    <TextView
        android:id="@+id/donationsAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/donationsTextView"
        android:layout_toRightOf="@+id/donationsTextView"
        android:layout_below="@+id/titheFreeAmountTextView"
        android:textSize="20sp"/>

    <!-- Provisions Title -->
    <TextView
        android:id="@+id/provisionsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/donationsTextView"
        android:textSize="20sp"
        android:text="@string/provisions"/>

    <!-- Provisions Amount -->
    <TextView
        android:id="@+id/provisionsAmountTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_toEndOf="@+id/provisionsTextView"
        android:layout_toRightOf="@+id/provisionsTextView"
        android:layout_below="@+id/donationsAmountTextView"
        android:textSize="20sp"/>
</RelativeLayout>
